--- a/index.html
+++ b/index.html
@@ -99,11 +99,8 @@
 								<span class="image main"><img src="images/pico2.jpeg" alt="" /></span>
 								
 								<a href="https://youtu.be/lyRLWyo84Xk">📃 CVsort - IA ♥ Système de trie de CVS </a> : Bienvenue sur CVsort, votre outil ultime pour simplifier et optimiser le processus de recrutement. En quelques clics, définissez vos critères, laissez CVsort analyser les candidatures, et découvrez les quatre meilleurs CVs sélectionnés avec soin, accompagnés de leurs scores pertinents. Avec CVsort, le recrutement devient une expérience ciblée et efficiente, vous permettant de consacrer votre temps à l'essentiel : trouver les talents qui feront la différence au sein de votre équipe. Avec CVsort, le recrutement devient une expérience personnalisée, offrant une précision inégalée et un gain de temps considérable. Ne perdez plus de temps à trier manuellement les candidatures, optez pour CVsort et découvrez une approche efficace et novatrice pour trouver les talents qui correspondent parfaitement à vos besoins.<br><br>
-								<!-- <a href="https://youtu.be/kGHopA66zrY">💬 youCy - IA ♥ Traitement du langage naturel</a> : Analyse le sentiment dominant derrière une phrase ou un ensemble de données pour en déduire s'ils sont négatifs ou positifs, montre les proportions de neg et pos et le nuage des mots les plus courants.<br><br>
-								<a href="https://youtu.be/mdxoe3U48Rw">🏔️ imaCy - IA ♥ Vision par ordinateur</a> : Cette application permet de classifier des images selon qu'elles soient des images de batiments, foret, glacier, montagne,mer, et rue.<br><br>
-								<a href="https://youtu.be/i6P7DJOkW3s">📊 electroDash - TDB ♥ Reporting avec Power BI </a> : Le tableau de bord offre une vue complète des indicateurs clés de performance de l'entreprise, tels que le chiffre d'affaires, le nombre de ventes, le panier moyen, etc.<br><br>
-								<a href="https://youtu.be/OdcZHIYMXbk">📈 alphaDash - TDB ♥ Reporting avec Plotly </a> : À partir de ce tableau de bord, on peut suivre en temps réel les activités de l'entreprise, évaluer la performance des différents pôles d'activités et ainsi améliorer le pilotage de la structure.<br><br>
-								<a href="https://medium.com/@sayadebayo/analyse-exploratoire-des-ventes-dun-supermarch%C3%A9-f552829ac498">💹 marketEDA - DA ♥ Analyse exploratoire de données</a> : Ce projet vise à analyser les ventes réalisées dans un supermarché, plus précisément dans ses trois succursales, afin d'expliquer le comportement des clients.<br> -->
+								<a href="https://youtu.be/lyRLWyo84Xk">📃 PerTest - IA ♥ Système de recrutement prédictif </a> : Découvrez PerTest, l'outil révolutionnaire qui va transformer la façon dont vous recrutez! Dans cette vidéo, plongez dans l'univers innovant de PerTest et apprenez comment cette plateforme puissante peut simplifier votre processus de recrutement. Trouver le candidat parfait n'a jamais été aussi facile - PerTest vous offre un système de suivi des candidatures (ATS) intelligent, associé à une fonctionnalité unique de génération de questionnaires basés sur les traits de personnalité recherchés. En un seul clic, définissez vos critères, partagez le questionnaire avec vos candidats, et laissez PerTest faire le reste. Gagnez du temps, optimisez votre recrutement et trouvez les talents qui correspondent parfaitement à votre équipe. Regardez maintenant pour découvrir comment PerTest peut révolutionner votre façon de recruter!<br><br>
+								
 
 							</article>
 
@@ -132,7 +129,7 @@
 									</ul>
 								</form>
 								<ul class="icons">
-									<li><a href="https://www.linkedin.com/in/gaelahouanvoedo/" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
+									<li><a href="https://www.linkedin.com/in/th%C3%A9octiste-romaric-balthasar-djossou-4283332a3/" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
 									<li><a href="https://github.com/Ciramorcate" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</article>
